--- a/arch/arm64/configs/chiron_defconfig
+++ b/arch/arm64/configs/chiron_defconfig
@@ -370,6 +370,12 @@ CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_FORCE=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_FORCE=y
+CONFIG_TOUCHSCREEN_FT5X46=y
+CONFIG_TOUCHSCREEN_FT5X46_CALIBRATE=y
+CONFIG_TOUCHSCREEN_FT5X46_TYPEB=y
+CONFIG_TOUCHSCREEN_FT5X46_I2C=y
+# CONFIG_TOUCHSCREEN_FT5X46_SPI is not set
+# CONFIG_TOUCHSCREEN_FT5X46P_PROXIMITY is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
